# shunsuke-ultimate-ai-platform

./: .gitignore  .npmrc  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  claude.config.json  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py  tsconfig.json  turbo.json
.claude/: settings.json
.claude/agents/: command-tower.md  performance-optimizer.md  quality-analyst.md
.claude/commands/: export-course.md  generate-course.md  shunsuke-INSTALL.md  shunsuke-README.md  shunsuke-analyze-quality.md  shunsuke-analyze.md  shunsuke-clean.md  shunsuke-deploy.md  shunsuke-dev-workflow.md  shunsuke-doc-generator.md  shunsuke-docker.md  shunsuke-extract-context.md  shunsuke-mcp-init.md  shunsuke-mcp-inspect.md  shunsuke-mcp-server.md  shunsuke-mcp-setup.md  shunsuke-mcp-tool.md  shunsuke-mcp.md  shunsuke-monitor.md  shunsuke-project-setup.md  shunsuke-security.md  shunsuke-setup-yaml-context.md  shunsuke-test-deploy.md  shunsuke-update-deps.md
apps/command-center/: package.json
claude-integrations/: README.md
claude-integrations/quality-guardian-mcp/: package.json
claude-integrations/shunsuke-scout-mcp/: package.json
claude-integrations/yaml-context-mcp/: package.json
core/command-tower/: command_tower.py
core/meta-framework/: meta_project_manager.py  project_orchestrator.py
deployment/: docker-compose.yml
deployment/kubernetes/: deployment.yaml
deployment/monitoring/: setup-monitoring.sh
deployment/scripts/: deploy.sh
deployment/terraform/: main.tf
orchestration/communication/: communication_protocol.py
orchestration/coordinator/: agent_coordinator.py
scripts/: generate-session-report.js  monorepo-health-check.js  setup-claude-integration.js  sync-claude-config.js  validate-code-quality.js
services/command-tower/: package.json
services/course-generator/: .env.example  .env.production.example  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  nginx.conf  package.json  test-api-simple.js  test-basic-functional.js  test-functional.js  test-gemini.js  test-integration.js  test-minimal.js  tsconfig.docker.json  tsconfig.json
services/course-generator/prisma/: schema.prisma
services/course-generator/prisma/migrations/20250804215823_init/: migration.sql
services/course-generator/prisma/migrations/20250804221441_add_course_sharing/: migration.sql
services/course-generator/prisma/migrations/20250804222433_add_learning_progress/: migration.sql
services/course-generator/prisma/migrations/20250804224236_add_prompt_templates/: migration.sql
services/course-generator/public/: index.html
services/course-generator/public/assets/css/: style.css
services/course-generator/public/assets/js/: app.js
services/course-generator/scripts/: seed-templates.ts
services/course-generator/src/: index.ts
services/course-generator/src/middleware/: auth.ts
services/course-generator/src/services/: audioService.ts  authService.ts  authServiceDb.ts  cacheService.ts  cacheStrategies.ts  contextAgent.ts  courseService.ts  databaseService.ts  exportService.ts  geminiService.ts  index.ts  progressService.ts  promptTemplateService.ts  redisService.ts  shareService.ts  storageService.ts  webCrawlerService.ts
services/course-generator/src/types/: auth.ts  index.ts
services/course-generator/src/utils/: errors.ts  index.ts  rateLimiter.ts
tests/e2e/: __init__.py  e2e_test_framework.py  scenario_builder.py
tests/e2e/scenarios/: complete_workflows.yaml
tests/integration/: integration_test_framework.py
tests/load/: load_test_framework.py
tests/security/: __init__.py  security_test_framework.py  vulnerability_payloads.py
tools/doc-synthesizer/: __init__.py  documentation_synthesizer.py  multilingual_documentation_methods.py  multilingual_manager.py  multilingual_templates.py  test_multilingual_system.py
tools/performance-suite/: __init__.py  benchmark_suite.py  optimization_engine.py  performance_profiler.py  resource_monitor.py
tools/quality-analyzer/: improvement_suggester.py  quality_guardian.py
